==> UKTailwind/CMM2V1.5/Src/Serial.c <==
#include "MMBasic_Includes.h"
#include "Hardware_Includes.h"

void SerialOpen(char *spec) {
	int baud, i, inv, oc, s2, de, parity, b7, bufsize, ilevel;
	char *interrupt, *TXinterrupt;
	GPIO_InitTypeDef GPIO_InitStruct;

	getargs(&spec, 21, ":,");										// this is a macro and must be the first executable stmt
	if(argc != 2 && (argc & 0x01) == 0) error("COM specification");

    b7 = de = parity = inv = oc = s2 = false;
    for(i = 0; i < 6; i++) {
    	if(str_equal(argv[argc - 1], "OC")) { oc = true; argc -= 2; }	// get the open collector option
    	if(str_equal(argv[argc - 1], "DEP")) { de = 1; argc -= 2; }	// get the data enable option
    	if(str_equal(argv[argc - 1], "DEN")) {
    		if(de)error("DE Can't both be negative and positive");
    		de = 2;
    		argc -= 2;
    	}	// get the data enable option
    	if(str_equal(argv[argc - 1], "EVEN")) {
    		if(parity)error("Syntax");
    		else {parity = 1; argc -= 2; }	// set even parity
    	}
    	if(str_equal(argv[argc - 1], "ODD")) {
    		if(parity)error("Syntax");
    		else {parity = 2; argc -= 2; }	// set even parity
    	}
    	if(str_equal(argv[argc - 1], "S2")) { s2 = true; argc -= 2; }	// get the two stop bit option
    	if(str_equal(argv[argc - 1], "7BIT")) { b7 = true; argc -= 2; }	// set the 7 bit byte option
    	if(str_equal(argv[argc - 1], "INV")) { inv = true; argc -= 2; }	// get the invert option
    }

	if(argc < 1 || argc > 13) error("COM specification");

	if(argc >= 3 && *argv[2]) {
		baud = getinteger(argv[2]);									// get the baud rate as a number
		if(baud<1200)error("1200 baud is minimum supported");
	} else
		baud = COM_DEFAULT_BAUD_RATE;

	if(argc >= 5 && *argv[4])
		bufsize = getinteger(argv[4]);								// get the buffer size as a number
	else
		bufsize = COM_DEFAULT_BUF_SIZE;

	if(argc >= 7) {
    	InterruptUsed = true;
    	argv[6]=strupr(argv[6]);
		interrupt = GetIntAddress(argv[6]);							// get the interrupt location
	} else
		interrupt = NULL;

	if(argc >= 9) {
		ilevel = getinteger(argv[8]);								// get the buffer level for interrupt as a number
		if(ilevel < 1 || ilevel > bufsize) error("COM specification");
	} else
		ilevel = 1;

	if(argc >= 11) {
    	InterruptUsed = true;
    	argv[6]=strupr(argv[10]);
		TXinterrupt = GetIntAddress(argv[10]);							// get the interrupt location
	} else
		TXinterrupt = NULL;


	if(spec[3] == '1') {
	///////////////////////////////// this is COM1 ////////////////////////////////////

		if(com1) error("Already open");
        CheckPin(COM1_RX_PIN, CP_CHECKALL);
        CheckPin(COM1_TX_PIN, CP_CHECKALL);

 		com1_buf_size = bufsize;									// extracted from the comspec above
		com1_interrupt = interrupt;
		com1_ilevel	= ilevel;
		com1_TX_interrupt = TXinterrupt;
		com1_TX_complete = false;

		// setup for receive
		com1Rx_buf = GetMemory(com1_buf_size);						// setup the buffer
		com1Rx_head = com1Rx_tail = 0;
		ExtCfg(COM1_RX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use


		// setup for transmit
		com1Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
		com1Tx_head = com1Tx_tail = 0;
		ExtCfg(COM1_TX_PIN, EXT_COM_RESERVED, 0);
		com1_bit9 = com1_mode = 0;
        if(parity)  com1_mode |= COM1_9B;
        if(de) {
            CheckPin(COM1_EN_PIN, CP_CHECKALL);
            ExtCfg(COM1_EN_PIN, EXT_COM_RESERVED, 0);               // reserve the pin for com use
            com1_mode |= COM1_DE;
       }

        setupuart(&huart2, USART2, de, inv, s2, parity, b7, baud);
        if(oc){
        	GPIO_InitStruct.Pin = COM1_TX_Pin;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        	GPIO_InitStruct.Pull = GPIO_NOPULL;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
        	HAL_GPIO_Init(COM1_TX_GPIO_Port, &GPIO_InitStruct);
        }
        if(Option.SerialPullup){
        	GPIO_InitStruct.Pin = COM1_RX_Pin;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        	GPIO_InitStruct.Pull = GPIO_PULLUP;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
        	HAL_GPIO_Init(COM1_RX_GPIO_Port, &GPIO_InitStruct);
        }
        if(de){
        	GPIO_InitStruct.Pin = COM1_DE_Pin;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        	GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
        	HAL_GPIO_Init(COM1_DE_GPIO_Port, &GPIO_InitStruct);
        }
        HAL_NVIC_SetPriority(USART2_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(USART2_IRQn);
        huart2.Instance->CR1 |= USART_CR1_RXNEIE;
        com1 = true;
	}
	else if (spec[3] == '2') {
	///////////////////////////////// this is COM2 ////////////////////////////////////

		if(com2) error("Already open");
        CheckPin(COM2_RX_PIN, CP_CHECKALL);
        CheckPin(COM2_TX_PIN, CP_CHECKALL);

 		com2_buf_size = bufsize;									// extracted from the comspec above
		com2_interrupt = interrupt;
		com2_ilevel	= ilevel;
		com2_TX_interrupt = TXinterrupt;
		com2_TX_complete = false;

		// setup for receive
		com2Rx_buf = GetMemory(com2_buf_size);						// setup the buffer
		com2Rx_head = com2Rx_tail = 0;
		ExtCfg(COM2_RX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use


		// setup for transmit
		com2Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
		com2Tx_head = com2Tx_tail = 0;
		ExtCfg(COM2_TX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use
		com2_bit9 = com2_mode = 0;
        if(de) {
        	error("Not available on COM2");
        }
        setupuart(&huart4, UART4, de, inv, s2, parity, b7, baud);
        if(oc){
        	GPIO_InitStruct.Pin = COM2_TX_Pin;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        	GPIO_InitStruct.Pull = GPIO_NOPULL;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF8_UART4;
        	HAL_GPIO_Init(COM2_TX_GPIO_Port, &GPIO_InitStruct);
        }
        if(Option.SerialPullup){
        	GPIO_InitStruct.Pin = COM2_RX_Pin;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        	GPIO_InitStruct.Pull = GPIO_PULLUP;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF8_UART4;
        	HAL_GPIO_Init(COM2_RX_GPIO_Port, &GPIO_InitStruct);
        }
        HAL_NVIC_SetPriority(UART4_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(UART4_IRQn);
        huart4.Instance->CR1 |= USART_CR1_RXNEIE;
        com2 = true;
	}
	else if (spec[3] == '3') {
///////////////////////////////// this is COM3 ////////////////////////////////////

	if(com3) error("Already open");
	if(Option.ConsolePort==3 && (Option.Console & 1 || OptionConsole & 1))error("Serial Console must be disabled");
	com3_buf_size = bufsize;									// extracted from the comspec above
	com3_interrupt = interrupt;
	com3_ilevel	= ilevel;
	com3_TX_interrupt = TXinterrupt;
	com3_TX_complete = false;

	// setup for receive
	com3Rx_buf = GetMemory(com3_buf_size);						// setup the buffer
	com3Rx_head = com3Rx_tail = 0;


	// setup for transmit
	com3Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
	com3Tx_head = com2Tx_tail = 0;
	com3_bit9 = com3_mode = 0;
    if(de) {
    	error("Not available on COM3");
    }
    setupuart(&huart1, USART1, de, inv, s2, parity, b7, baud);
    if(oc){
        GPIO_InitStruct.Pin = GPIO_PIN_9;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        GPIO_InitStruct.Alternate = GPIO_AF7_USART1;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
    }
    if(Option.SerialPullup){
        GPIO_InitStruct.Pin = GPIO_PIN_10;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        GPIO_InitStruct.Alternate = GPIO_AF7_USART1;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
    }
    HAL_NVIC_SetPriority(USART1_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(USART1_IRQn);
    huart1.Instance->CR1 |= USART_CR1_RXNEIE;
    com3 = true;
	} else error("Invalid COM port");
}

void SerialClose(int comnbr) {

	if(comnbr == 1 && com1) {
		HAL_UART_DeInit(&huart2);
		if(com1_mode & COM1_DE) {
			ExtCfg(COM1_EN_PIN, EXT_NOT_CONFIG, 0);
		}
		com1 = false;
		com1_interrupt = NULL;
        PinSetBit(COM1_RX_PIN, CNPUCLR);                            // clear the pullup or pulldown on Rx
        PinSetBit(COM1_RX_PIN, CNPDCLR);
		ExtCfg(COM1_RX_PIN, EXT_NOT_CONFIG, 0);
		ExtCfg(COM1_TX_PIN, EXT_NOT_CONFIG, 0);
		FreeMemorySafe((void *)&com1Rx_buf);
		FreeMemorySafe((void *)&com1Tx_buf);
	}

	else if(comnbr == 2 && com2) {
		HAL_UART_DeInit(&huart4);
		com2 = false;
		com2_interrupt = NULL;
        PinSetBit(COM2_RX_PIN, CNPUCLR);                            // clear the pullup or pulldown on Rx
        PinSetBit(COM2_RX_PIN, CNPDCLR);
		ExtCfg(COM2_RX_PIN, EXT_NOT_CONFIG, 0);
		ExtCfg(COM2_TX_PIN, EXT_NOT_CONFIG, 0);
		FreeMemorySafe((void *)&com2Rx_buf);
		FreeMemorySafe((void *)&com2Tx_buf);
	}

	else if(comnbr == 3 && com3) {
		HAL_UART_DeInit(&huart1);
		com3 = false;
		com3_interrupt = NULL;
		FreeMemorySafe((void *)&com3Rx_buf);
		FreeMemorySafe((void *)&com3Tx_buf);
	}
}

unsigned char SerialPutchar(int comnbr, unsigned char c) {
	if(comnbr == 1) {
        int empty=(huart2.Instance->ICR & USART_ICR_TCCF) | !(huart2.Instance->CR1 & USART_CR1_TCIE) ;
		while(com1Tx_tail == ((com1Tx_head + 1) % TX_BUFFER_SIZE)); //wait if buffer full
		com1Tx_buf[com1Tx_head] = c;							// add the char
		com1Tx_head = (com1Tx_head + 1) % TX_BUFFER_SIZE;		   // advance the head of the queue
		if(empty){
	        huart2.Instance->CR1 |= USART_CR1_TCIE;
		}
	}
	else if(comnbr == 2) {
        int empty=(huart4.Instance->ICR & USART_ICR_TCCF) | !(huart4.Instance->CR1 & USART_CR1_TCIE) ;
		while(com2Tx_tail == ((com2Tx_head + 1) % TX_BUFFER_SIZE)); //wait if buffer full
		com2Tx_buf[com2Tx_head] = c;							// add the char
		com2Tx_head = (com2Tx_head + 1) % TX_BUFFER_SIZE;		   // advance the head of the queue
		if(empty){
	        huart4.Instance->CR1 |= USART_CR1_TCIE;
		}
	}
	else if(comnbr == 3) {
        int empty=(huart1.Instance->ICR & USART_ICR_TCCF) | !(huart1.Instance->CR1 & USART_CR1_TCIE) ;
		while(com3Tx_tail == ((com3Tx_head + 1) % TX_BUFFER_SIZE)); //wait if buffer full
		com3Tx_buf[com3Tx_head] = c;							// add the char
		com3Tx_head = (com3Tx_head + 1) % TX_BUFFER_SIZE;		   // advance the head of the queue
		if(empty){
	        huart1.Instance->CR1 |= USART_CR1_TCIE;
		}
	}
	return c;
}

int SerialRxStatus(int comnbr) {
	int i = 0;
	if(comnbr == 1) {
	    huart2.Instance->CR1 &= ~USART_CR1_RXNEIE;
		i = com1Rx_head - com1Rx_tail;
	    huart2.Instance->CR1 |= USART_CR1_RXNEIE;
		if(i < 0) i += com1_buf_size;
	}
	else if(comnbr == 2) {
	    huart4.Instance->CR1 &= ~USART_CR1_RXNEIE;
		i = com2Rx_head - com2Rx_tail;
	    huart4.Instance->CR1 |= USART_CR1_RXNEIE;
		if(i < 0) i += com2_buf_size;
	}
	else if(comnbr == 3) {
	    huart1.Instance->CR1 &= ~USART_CR1_RXNEIE;
		i = com3Rx_head - com3Rx_tail;
	    huart1.Instance->CR1 |= USART_CR1_RXNEIE;
		if(i < 0) i += com3_buf_size;
	}

	return i;
}

int SerialTxStatus(int comnbr) {
	int i = 0;
	if(comnbr == 0) {
		i = ConsoleTxBufHead - ConsoleTxBufTail;
		if(i < 0) i += CONSOLE_TX_BUF_SIZE;
	}
	if(comnbr == 1) {
		i = com1Tx_head - com1Tx_tail;
		if(i < 0) i += TX_BUFFER_SIZE;
	}
	else if(comnbr == 2) {
		i = com2Tx_head - com2Tx_tail;
		if(i < 0) i += TX_BUFFER_SIZE;
	}
	else if(comnbr == 3) {
		i = com3Tx_head - com3Tx_tail;
		if(i < 0) i += TX_BUFFER_SIZE;
	}
	return i;
}

int SerialGetchar(int comnbr) {
	int c;
    c = -1;                                                         // -1 is no data
	if(comnbr == 1) {
	    huart2.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com1Rx_head != com1Rx_tail) {                            // if the queue has something in it
			c = com1Rx_buf[com1Rx_tail];                            // get the char
 			com1Rx_tail = (com1Rx_tail + 1) % com1_buf_size;        // and remove from the buffer
		}
	    huart2.Instance->CR1 |= USART_CR1_RXNEIE;
	}
	else if(comnbr == 2) {

	    huart4.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com2Rx_head != com2Rx_tail) {                            // if the queue has something in it
			c = com2Rx_buf[com2Rx_tail];                            // get the char
 			com2Rx_tail = (com2Rx_tail + 1) % com2_buf_size;        // and remove from the buffer
		}
	    huart4.Instance->CR1 |= USART_CR1_RXNEIE;
	}
	else if(comnbr == 3) {

	    huart1.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com3Rx_head != com3Rx_tail) {                            // if the queue has something in it
			c = com3Rx_buf[com3Rx_tail];                            // get the char
 			com3Rx_tail = (com3Rx_tail + 1) % com3_buf_size;        // and remove from the buffer
		}
	    huart1.Instance->CR1 |= USART_CR1_RXNEIE;
	}
	return c;
}
